# nostrdm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  dm.rs  errors.rs  keys.rs  main.rs  relays.rs
